# LDOSOptimization

./: .gitignore  METALS_Silver_Palik.txt  README.md  SphereResonance.ipynb  SphericalHarmnoicsOptimization  Summary.ipynb
.ipynb_checkpoints/: Summary-checkpoint.ipynb
GeoMesher/: CMakeLists.txt  TestMesher
GeoMesher/src/: LevelSetFunctions.cpp  basisfunctions.h  cgalDistMesh.cpp  runMesher.cpp
GeoMesher/src/BFInclude/: LevelSetFunctions.h
LaTexDoc/: ShapeOpt.aux  ShapeOpt.tex
SHOpt/lib/: libbasisfunctions.dylib  libmeshutils.dylib
SHOpt/src/: cgalDistMesh.cpp  cgalDistMesh.h
SHOpt/src/others/: SHOpt.cpp
ShellOptimization/: CMakeLists.txt  GeoMesher  Gold.txt  Shell.scuffgeo  Shell450.txt  Shell550.txt  Silver.txt  run
ShellOptimization/src/: LDOSmath.cpp  LDOSmath.h  main.cpp
SphericalHarmonicsMesher/: CMakeLists.txt  TestMesher
SphericalHarmonicsMesher/src/: BaseGeo.cpp  Mesh.cpp  MeshUtils.cpp  Surface_mesh_custom_criterion.h  basisfunctions.h  cgalDistMesh.cpp  cgalDistMesh.h  genRandomSpherePoints.cpp  meshutils.h  runMesher.cpp
SphericalHarmonicsMesher/src/BFInclude/: BaseGeo.h  SphericalHarmonics.h
SphericalHarmonicsMesher/src/others/: OFFtoMSH.cpp  OFFtoMSH.h
SphericalHarmonicsOptimization/: CMakeLists.txt  Ellipsoid.msh  GeoMesher  Makefile  SHMesher  Silver.txt  SphericalHarmonics.scuffgeo  coeff.txt  coeff_initial.txt  results.txt  results001.txt  results002.txt  results003.txt  results2.txt  results2_0.9.txt  results4_0.7.txt  results4_0.9.txt  results4_1.txt  results95.txt  results98.txt  results99.txt  results_100opt.txt  results_10nm.txt  results_20_20ed.txt  results_20nm.txt  results_450.txt  results_550_100.txt  results_550_50.txt  results_600.txt  results_BOBYQA1.txt  results_MMA2.txt  results_MMAs.txt  results_adam.txt  results_adam2.txt  results_adam4.txt  results_adam500_1.txt  results_adam500_2.txt  results_adamn.txt  results_adamrandom.txt  results_adams2.txt  (+23 more)
SphericalHarmonicsOptimization/Data/: results111.txt  results1_2_30.txt  results_50opt.txt  results_550_100.txt  results_BOBYQA1.txt  results_adamn1.txt  results_adamx2.txt  results_alpham.txt  results_apha0.02.txt  results_d0  results_nd0.txt  results_opt100_1.txt
SphericalHarmonicsOptimization/Data/Datan/: nd1.txt  results1.txt  results3.txt  results4.txt  results_MMA1.txt  results_MMA3.txt  results_adam1.txt  results_adam3.txt  results_adam5.txt  results_adam6.txt  results_d3.txt  results_d5.txt
SphericalHarmonicsOptimization/Data/Datao/: results0.05.txt  results1_1.txt  results2_1.txt  results2_10.txt  results4_1.txt  results_100MMA1.txt  results_2020ed2.txt  results_500.txt  results_550.txt  results_550_203.4.txt  results_alpha.txt  results_alpha0.1.txt  results_deriv.txt  results_ed1.txt  results_opt100.txt  results_opt100_2.txt  results_opt50_1.txt  results_sphere.txt
SphericalHarmonicsOptimization/lib/: libbasisfunctions.dylib
SphericalHarmonicsOptimization/src/: LDOSmath.cpp  LDOSmath.h  SphericalHarmonics.cpp  emain.cpp  main.cpp  scuff-scatter.cpp  scuff-scatter.h
SphericalHarmonicsOptimization/src/BFInclude/: SphericalHarmonics.h
SphericalHarmonicsOptimization/src/others/: Adam.cpp  ComputeQ.cpp  DerValid.cpp  DerValid1.cpp  EDerValid.cpp  EllipsoidOpt.cpp  GF.cpp  MyOpt.cpp  RevLimit.cpp  SHOpt.cpp
